# tpDcc-tools-cookiecutter

./: README.md  README.rst  requirements.txt
tpDcc-tools-{{cookiecutter.tool_name}}/: .travis.yml  MANIFEST.in  README.rst  requirements.txt  setup.cfg
tpDcc-tools-{{cookiecutter.tool_name}}/docs/sphinx/: conf.py  index.rst
tpDcc-tools-{{cookiecutter.tool_name}}/tests/: test_general.py
tpDcc-tools-{{cookiecutter.tool_name}}/tpDcc/: __init__.py
tpDcc-tools-{{cookiecutter.tool_name}}/tpDcc/tools/{{cookiecutter.tool_name}}/: __init__.py  __logging__.ini  __version__.py  _version.py
tpDcc-tools-{{cookiecutter.tool_name}}/tpDcc/tools/{{cookiecutter.tool_name}}/core/: controller.py  model.py  tool.py  toolset.py  view.py
